

* Installation Changes in Emacs 26.2

---
** Building Emacs with the '--with-xwidgets' option now requires WebKit2
To build Emacs with xwidgets support, you will need to install the
webkit2gtk-4.0 package; version 2.12 or later is required.
(This change was actually made in Emacs 26.1, but was not called out
in its NEWS.)


* Startup Changes in Emacs 26.2


* Changes in Emacs 26.2


* Editing Changes in Emacs 26.2


* Changes in Specialized Modes and Packages in Emacs 26.2

** Shell mode

---
*** Shell mode buffers now have 'scroll-conservatively' set to 101.
This is so as to better emulate the scrolling behavior of a text
terminal when new output is added to the screen buffer.  To get back
the previous behavior, reset 'scroll-conservatively' to zero (or any
other value you like) in a function and add it to 'shell-mode-hook'.
(This change was actually made in Emacs 26.1, but was not called out
in its NEWS.)


* New Modes and Packages in Emacs 26.2


* Incompatible Lisp Changes in Emacs 26.2


* Lisp Changes in Emacs 26.2


* Changes in Emacs 26.2 on Non-Free Operating Systems


* Installation Changes in Emacs 26.1

** By default libgnutls is now required when building Emacs.
Use 'configure --with-gnutls=no' to build even when GnuTLS is missing.

** GnuTLS version 2.12.2 or later is now required, instead of merely
version 2.6.6 or later.

** The new option 'configure --with-mailutils' causes Emacs to rely on
GNU Mailutils to retrieve email.  It is recommended, and is the
default if GNU Mailutils is installed.  When --with-mailutils is not
in effect, the Emacs build procedure by default continues to build and
install a limited 'movemail' substitute that retrieves POP3 email only
via insecure channels.  To avoid this problem, use either
--with-mailutils or --without-pop when configuring; --without-pop
is the default on platforms other than native MS-Windows.

** The new option 'configure --enable-gcc-warnings=warn-only' causes